# mcare

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: git-how-to.md  mcare-ar-concept.md  mcare-ar-wish-list.md  mcare-arch-roadmap.pptx  mcare-behavioral-science.md  mcare-card-game-requirements.md  mcare-checklist.md  mcare-engagement-metrics.md  mcare-graphics.md  mcare-headset-makers.md  mcare-hollywood.md  mcare-hud.md  mcare-login-avatars.md  mcare-metrics.md  mcare-packets.md  mcare-requirements.md  mcare-setup.md  mcare-spatial-audio.md  mcare-translation.md  mola.md
mcare_client/: README.md
mcare_client/aframe/: mobile.php
mcare_client/babylonjs/: jedi.php
mcare_client/babylonjs/hospital/: ar5.php  index.php
mcare_client/babylonjs/hospital/images/: license.txt
mcare_client/babylonjs/hospital/meshes/: license.txt  question.gltf
mcare_client/babylonjs/hospital/textures/: license.txt
mcare_client/babylonjs/tents/: test.php
mcare_client/data/: who_database_dump.sql
mcare_client/handtracking/: demo.css  index.php  info.txt
mcare_client/mapper/: addFloor.php  addProp.php  autoFloor.php  closePolygon.php  db.php  deleteAllPolygon.php  deleteFloor.php  deleteMark.php  deletePath.php  deletePoint.php  deletePointFloor.php  draggin.min.js.mit  path.php  pathMark.php  redrawPath.php  redrawValues.php  redrawValuesFloor.php  saveAutoFloor.php  saveDot.php  saveDotFloor.php  saveDotPath.php  saveProp.php  start.php
mcare_client/mapper/icons/printscreenFrom3d/: license.txt
mcare_client/mapper/icons/smallIcons/: license.txt
mcare_client/mapper/preview/: cama.gltf  desk.gltf  grid-shader.js  lab.gltf  license.txt  mri1.gltf  operacoes.gltf  polygon.js  preview.php  semaforo.gltf  shelf.gltf
mcare_client/server/: client.html  phpwebsocket.php  ws_server.php
mcare_client/web/: changeTheme.php  db.php  deleteImage.php  deleteLocal.php  deletePlant.php  editHosp.php  editPlant.php  functions.php  hospList.php  index.php  saveDivision.php  saveFile.php  saveImage.php  saveLocal.php
mcare_server/: Action.cpp  Action.h  CHANGES.md  CMakeLists.txt  Connection.cpp  Connection.h  Game.cpp  Game.h  GameServer.cpp  GameServer.h  Games.cpp  Games.h  Hospital.cpp  Hospital.h  Hospitals.cpp  Hospitals.h  Lobby.cpp  Lobby.h  Login.cpp  Login.h  Mola.cpp  Mola.h  MsgQueue.cpp  MsgQueue.h  Packet.cpp  Packet.h  Player.cpp  Player.h  Players.cpp  Players.h  README.md  Replay.cpp  Replay.h  Timer.cpp  Timer.h  mcare_server.cpp  sources.cmake
mcare_server/test/: test_Action.cpp  test_Connection.cpp  test_Game.cpp  test_GameServer.cpp  test_Games.cpp  test_Hospital.cpp  test_Hospitals.cpp  test_Lobby.cpp  test_Login.cpp  test_Mola.cpp  test_MsgQueue.cpp  test_Packet.cpp  test_Player.cpp  test_Players.cpp  test_Replay.cpp  test_Timer.cpp
simple-libwebsockets-example/: CMakeLists.txt  client.c
